[project]
name = "aiowallhaven"
version = "0.0.5"
description = "an asynchronous API wrapper for https://wallhaven.cc"
authors = [
    {name = "Dmitrii Efimov", email = "efimov.1992@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiolimiter==1.2.1",
    "aiosignal==1.3.2",
    "async-timeout==5.0.1",
    "attrs==24.3.0",
    "frozenlist==1.5.0",
    "idna==3.10",
    "multidict==6.1.0",
    "propcache==0.2.1",
    "typing-extensions==4.12.2",
    "yarl==1.18.3",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"