[project]
name = "aiowallhaven"
version = "0.0.5"
description = "an asynchronous API wrapper for https://wallhaven.cc"
authors = [
    {name = "Dmitrii Efimov", email = "efimov.1992@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiolimiter==1.2.1",
    "aiosignal==1.4.0",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "typing-extensions==4.15.0",
    "yarl==1.22.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"